src/flake8_import_conventions/snapshots/ruff__flake8_import_conventions__tests__custom.snap
---
source: src/flake8_import_conventions/mod.rs
expression: checks
---
- kind:
    ImportAliasIsNotConventional:
      - dask.array
      - da
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 17
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - dask.dataframe
      - dd
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 21
  fix: ~

