src/flake8_import_conventions/snapshots/ruff__flake8_import_conventions__tests__defaults.snap
---
source: src/flake8_import_conventions/mod.rs
expression: checks
---
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 13
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 32
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - numpy
      - np
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 12
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 13
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 14
  fix: ~

