src/flake8_import_conventions/snapshots/ruff__flake8_import_conventions__tests__remove_default.snap
---
source: src/flake8_import_conventions/mod.rs
expression: checks
---
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 13
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 24
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 13
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 14
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 21
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 32
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 21
  fix: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 22
  fix: ~

